# randomized-incremental-convex-hull

./: .gitignore  CMakeLists.txt  ParallelCH.cpp  ParallelCH.h  README.md  comparison_graphic.py  graphics.py  main.cpp  parallel_graphic.py  requirements.txt  test_both_convex_hull.cpp  test_parallel_visualizer.cpp  test_sequential_visualizer.cpp  test_visualizer.cpp  visualize_hull.py
include/: ParallelCH.h  convex_hull.h  parallel_convex_hull.h  sequential_convex_hull.h  visualizer_helper.h
src/: ParallelCH.cpp  convex_hull.cpp  parallel_convex_hull.cpp  sequential_convex_hull.cpp  visualizer_helper.cpp
